fix: update broken text visibility

--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -79,7 +79,7 @@
   --secondary: oklch(0.968 0.211 109.7692);
   --secondary-foreground: oklch(0 0 0);
   --muted: oklch(0.9551 0 0);
-  --muted-foreground: oklch(0.3211 0 0);
+  --muted-foreground: oklch(0.53 0.0126 17.56);
   --accent: oklch(0.5635 0.2408 260.8178);
   --accent-foreground: oklch(1 0 0);
   --destructive: oklch(0 0 0);
